make compile (list.getFirst() not available)